--- a/package.yaml
+++ b/package.yaml
@@ -6,6 +6,9 @@ git:              "https://gitlab.software.imdea.org/streamrv/hlola"
 # maintainer:          "example@example.com"
 # copyright:           "2019 Author name here"
 
+# extra-source-files:
+# - README.md
+
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
 # category:            Web
@@ -31,6 +34,7 @@ dependencies:
 - regex
 - template-haskell
 - QuickCheck
+  # - constraints
 
 # Array and Vector are very similar... But Vector should be more efficient
 
